--- a/pages/profile-page.html
+++ b/pages/profile-page.html
@@ -17,7 +17,7 @@
 
     <div class="flexbox">
       <div class="flex-items">
-        <a href=""><img src="../assests/ProfilePicture.jpg" alt="useracct"></a>
+        <a href="../pages/home-page.html"><img src="../assests/ProfilePicture.jpg" alt="useracct"></a>
         <span>Murat</span>
       </div>
       <div class="flex-items">
@@ -33,7 +33,7 @@
         <span>Cocuk</span>
       </div>
       <div class="flex-items add">
-        <a href=""><img src="../assests/Vector.jpg" alt="useracct"></a>
+        <a href="../pages/sign-in.html"><img src="../assests/Vector.jpg" alt="useracct"></a>
         <span>Profil Ekle</span>
       </div>
     </div>
