--- a/pages/sign-in.html
+++ b/pages/sign-in.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <div class="logo">
-    <img src="../assests/Fill-14.png" alt="Netflix logo">
+    <a href="../pages/userlanding-pg.html"><img src="../assests/Fill-14.png" alt="Netflix logo"></a>
   </div>
   <div class="form-container">
   <form action="" class="sign-in-form">
