--- a/sign-in.html
+++ b/sign-in.html
@@ -5,11 +5,11 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Netflix sign-in</title>
-  <link rel="stylesheet" href="../styles/sign-in.css">
+  <link rel="stylesheet" href="./styles/sign-in.css">
 </head>
 <body>
   <div class="logo">
-    <a href="../pages/userlanding-pg.html"><img src="../assests/Fill-14.png" alt="Netflix logo"></a>
+    <a href="./pages/userlanding-pg.html"><img src="./assests/Fill-14.png" alt="Netflix logo"></a>
   </div>
   <div class="form-container">
   <form action="" class="sign-in-form">
@@ -33,7 +33,7 @@
     </div>
 
     <div class="fb-logo">
-      <p><a href=""><img src="../assests/facebook-icon.png" alt="facebook-logo">Login with Facebook</a> </p>
+      <p><a href=""><img src="./assests/facebook-icon.png" alt="facebook-logo">Login with Facebook</a> </p>
     </div>
     
 
