--- a/userlanding-pg.html
+++ b/userlanding-pg.html
@@ -5,13 +5,13 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Netflix landing page</title>
-  <link rel="stylesheet" href="../styles/userlanding-pg.css">
+  <link rel="stylesheet" href="./styles/userlanding-pg.css">
 </head>
 <body>
 <header class="header">
   <nav>
     <div class="navcontainer">
-      <div class="navitems1"><img src="../assests/Fill-14.png" alt="Netflix logo"></div>
+      <div class="navitems1"><img src="./assests/Fill-14.png" alt="Netflix logo"></div>
       <div class="navitems2">
          <ul>
            <li><select name="language" id="language">
@@ -21,7 +21,7 @@
              <option value="Arabic">Arabic</option>
              <option value="Turkish">Turkish</option>
            </select></li>
-           <li><a href="../pages/sign-in.html" target="_blank">sign in</a></li>
+           <li><a href="./pages/sign-in.html" target="_blank">sign in</a></li>
          </ul>
        </div>
      </div>
@@ -39,7 +39,7 @@
           <div class="btn">
             <button type="submit">Get Started </button>
             <div class="img">
-              <img src="../assests/button arrow.png" alt="getstarted">
+              <img src="./assests/button arrow.png" alt="getstarted">
             </div>
           </div>
         </form>
@@ -55,14 +55,14 @@
     <p>Watch on smart Tvs, Playstation, Xbox, Chromecast, Apple Tv, Blu-ray players, and more.</p>
   </div>
   <div class="propflex">
-    <img src="../assests/Netflix India – Watch TV Shows Online, Watch Movies Online_2 1.jpg" alt="">
+    <img src="./assests/Netflix India – Watch TV Shows Online, Watch Movies Online_2 1.jpg" alt="">
   </div>
 </div>
 
 
 <div class="section2">
   <div class="propflex">
-    <img src="../assests/Rectangle.jpg" alt="">
+    <img src="./assests/Rectangle.jpg" alt="">
   </div>
   <div class="propflex">
     <h2>Download your shows and watch offline.</h2>
@@ -76,13 +76,13 @@
     <p>Stream unlimited movies and Tv shows on  your phone, tablets, laptop, and Tv without paying more.</p>
   </div>
   <div class="propflex">
-    <img src="../assests/Netflix India – Watch TV Shows Online, Watch Movies Online 1.jpg" alt="">
+    <img src="./assests/Netflix India – Watch TV Shows Online, Watch Movies Online 1.jpg" alt="">
   </div>
 </div>
 
 <div class="section2">
   <div class="propflex">
-    <img src="../assests/Rectangle (2).jpg" alt="">
+    <img src="./assests/Rectangle (2).jpg" alt="">
   </div>
   <div class="propflex">
     <h2>Create profile for kids.</h2>
@@ -161,7 +161,7 @@
         <div class="btn">
           <button type="submit">Get Started </button>
           <div class="img">
-            <img src="../assests/button arrow.png" alt="getstarted">
+            <img src="./assests/button arrow.png" alt="getstarted">
           </div>
         </div>
       </form>
@@ -190,7 +190,7 @@
     </div>
     <div class="flex-items">
       <ul>
-        <li><a href="../pages/profile-page.html">Account</a></li>
+        <li><a href="./pages/profile-page.html">Account</a></li>
         <li><a href="">Redeem Gifts Cards</a></li>
         <li><a href="">Privacy</a></li>
         <li><a href="">Speed Test</a></li>
