--- a/home-page.html
+++ b/home-page.html
@@ -5,14 +5,14 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Homepage</title>
-  <link rel="stylesheet" href="../styles/home-page.css">
+  <link rel="stylesheet" href="./styles/home-page.css">
 </head>
 <body>
   <header>
 <nav class="navigation">
       <div class="navbar">
         <div class="flex">
-            <div><img src="../assests/Fill-14.png" alt=""></div>
+            <div><img src="./assests/Fill-14.png" alt=""></div>
           <div><a href="">Ana sayfa</a></div>
            <div><a href=""> Diziler</a></div>
            <div><a href=""> Filmler</a></div> 
@@ -20,11 +20,11 @@
             <div><a href="">Listen</a></div>
         </div>
         <div class="flex">
-          <div><img src="../assests/search-icon.png" alt="search-icon"></div>
+          <div><img src="./assests/search-icon.png" alt="search-icon"></div>
           <div>Cocuk</div>
-           <div><a href=""> <img src="../assests/navicon.png" alt="navicon"></a></div>
-            <div><a href=""> <img src="../assests/notificationicon.png" alt="notificationicon"></a></div>
-            <div> <a href="../pages/profile-page.html"><img src="../assests/profileicon.png" alt="profileicon"></a></div>
+           <div><a href=""> <img src="./assests/navicon.png" alt="navicon"></a></div>
+            <div><a href=""> <img src="./assests/notificationicon.png" alt="notificationicon"></a></div>
+            <div> <a href="./pages/profile-page.html"><img src="./assests/profileicon.png" alt="profileicon"></a></div>
         </div>
         
       </div>
@@ -46,33 +46,33 @@
     </div>
       <section class="grid-container snap-scroll">
           <div class="griditems">
-            <img src="../assests/MoviePoster.png" alt=""></div>
+            <img src="./assests/MoviePoster.png" alt=""></div>
           <div class="griditems">
-            <img src="../assests/MoviePoster (1).png" alt=""></div>
+            <img src="./assests/MoviePoster (1).png" alt=""></div>
           <div class="griditems">
-            <img src="../assests/MoviePoster (2).png" alt=""></div>
+            <img src="./assests/MoviePoster (2).png" alt=""></div>
           <div class="griditems">
-            <img src="../assests/MoviePoster (3).png" alt=""></div>
+            <img src="./assests/MoviePoster (3).png" alt=""></div>
           <div class="griditems">
-            <img src="../assests/MoviePoster (4).png" alt=""></div>
+            <img src="./assests/MoviePoster (4).png" alt=""></div>
           <div class="griditems">
-            <img src="../assests/MoviePoster (9).png" alt=""></div>
+            <img src="./assests/MoviePoster (9).png" alt=""></div>
           <div class="griditems">
-            <img src="../assests/MoviePoster (16).png" alt=""></div>
+            <img src="./assests/MoviePoster (16).png" alt=""></div>
           <div class="griditems">
-            <img src="../assests/MoviePoster (2).png" alt=""></div>
+            <img src="./assests/MoviePoster (2).png" alt=""></div>
           <div class="griditems">
-            <img src="../assests/MoviePoster (10).png" alt=""></div>
+            <img src="./assests/MoviePoster (10).png" alt=""></div>
           <div class="griditems">
-            <img src="../assests/MoviePoster (11).png" alt=""></div>
+            <img src="./assests/MoviePoster (11).png" alt=""></div>
           <div class="griditems">
-            <img src="../assests/MoviePoster (8).png" alt=""></div>
+            <img src="./assests/MoviePoster (8).png" alt=""></div>
           <div class="griditems">
-            <img src="../assests/MoviePoster (6).png" alt=""></div>
+            <img src="./assests/MoviePoster (6).png" alt=""></div>
           <div class="griditems">
-            <img src="../assests/MoviePoster (4).png" alt=""></div>
+            <img src="./assests/MoviePoster (4).png" alt=""></div>
           <div class="griditems">
-            <img src="../assests/MoviePoster (18).png" alt=""></div>
+            <img src="./assests/MoviePoster (18).png" alt=""></div>
       </section>
   </div>
     </header>
@@ -80,79 +80,79 @@
   <h3>Kemal, iziemeye Devam Et</h3>
   <section class="grid-container snap-scroll">
       <div class="griditems">
-        <img src="../assests/MoviePoster (5).png" alt="">
+        <img src="./assests/MoviePoster (5).png" alt="">
       </div>
       <div class="griditems">
-        <img src="../assests/MoviePoster (6).png" alt="">
+        <img src="./assests/MoviePoster (6).png" alt="">
       </div>
       <div class="griditems">
-        <img src="../assests/MoviePoster (7).png" alt="">
+        <img src="./assests/MoviePoster (7).png" alt="">
       </div>
       <div class="griditems">
-        <img src="../assests/MoviePoster (8).png" alt="">
+        <img src="./assests/MoviePoster (8).png" alt="">
       </div>
       <div class="griditems">
-        <img src="../assests/MoviePoster (19).png" alt="">
+        <img src="./assests/MoviePoster (19).png" alt="">
       </div>
       <div class="griditems">
-        <img src="../assests/MoviePoster.png" alt="">
+        <img src="./assests/MoviePoster.png" alt="">
       </div>
       <div class="griditems">
-        <img src="../assests/MoviePoster (11).png" alt="">
+        <img src="./assests/MoviePoster (11).png" alt="">
       </div>
       <div class="griditems">
-        <img src="../assests/MoviePoster (30).png" alt="">
+        <img src="./assests/MoviePoster (30).png" alt="">
       </div>
   </section>
     <h3>Gundemdekiler</h3>
   <section class="grid-container snap-scroll">
       <div class="griditems">
-        <img src="../assests/MoviePoster (9).png" alt="">
+        <img src="./assests/MoviePoster (9).png" alt="">
       </div>
       <div class="griditems">
-        <img src="../assests/MoviePoster (10).png" alt="">
+        <img src="./assests/MoviePoster (10).png" alt="">
       </div>
       <div class="griditems">
-        <img src="../assests/MoviePoster (11).png" alt="">
+        <img src="./assests/MoviePoster (11).png" alt="">
       </div>
       <div class="griditems">
-        <img src="../assests/MoviePoster (12).png" alt="">
+        <img src="./assests/MoviePoster (12).png" alt="">
       </div>
       <div class="griditems">
-        <img src="../assests/MoviePoster (18).png" alt="">
+        <img src="./assests/MoviePoster (18).png" alt="">
       </div>
       <div class="griditems">
-        <img src="../assests/MoviePoster (25).png" alt="">
+        <img src="./assests/MoviePoster (25).png" alt="">
       </div>
       <div class="griditems">
-        <img src="../assests/MoviePoster (24).png" alt="">
+        <img src="./assests/MoviePoster (24).png" alt="">
       </div>
       <div class="griditems">
-        <img src="../assests/MoviePoster (29).png" alt="">
+        <img src="./assests/MoviePoster (29).png" alt="">
       </div>
       <div class="griditems">
-        <img src="../assests/MoviePoster (26).png" alt="">
+        <img src="./assests/MoviePoster (26).png" alt="">
       </div>
   </section>
   <h3>Netfdivx Orijinal icerikleri</h3>
   <section class="flex-container snap-scroll">
       <div class="flexitems">
-        <img src="../assests/MoviePoster (13).png" alt="">
+        <img src="./assests/MoviePoster (13).png" alt="">
       </div>
       <div class="flexitems">
-        <img src="../assests/MoviePoster (14).png" alt="">
+        <img src="./assests/MoviePoster (14).png" alt="">
       </div>
       <div class="flexitems">
-        <img src="../assests/MoviePoster (15).png" alt="">
+        <img src="./assests/MoviePoster (15).png" alt="">
       </div>
       <div class="flexitems">
-        <img src="../assests/MoviePoster (16).png" alt="">
+        <img src="./assests/MoviePoster (16).png" alt="">
       </div>
       <div class="flexitems">
-        <img src="../assests/MoviePoster (17).png" alt="">
+        <img src="./assests/MoviePoster (17).png" alt="">
       </div>
       <div class="flexitems">
-        <img src="../assests/MoviePoster (22).png" alt="">
+        <img src="./assests/MoviePoster (22).png" alt="">
       </div>
     </section>
 
@@ -161,22 +161,22 @@
   <h3 class="groundh3">Yeniden izle</h3>
   <section class="ground-container snap-scroll">
       <div class="grounditems">
-        <img src="../assests/MoviePoster (23).png" alt="">
+        <img src="./assests/MoviePoster (23).png" alt="">
       </div>
       <div class="grounditems">
-        <img src="../assests/MoviePoster (24).png" alt="">
+        <img src="./assests/MoviePoster (24).png" alt="">
       </div>
       <div class="grounditems">
-        <img src="../assests/MoviePoster (25).png" alt="">
+        <img src="./assests/MoviePoster (25).png" alt="">
       </div>
       <div class="grounditems">
-        <img src="../assests/MoviePoster (26).png" alt="">
+        <img src="./assests/MoviePoster (26).png" alt="">
       </div>
       <div class="grounditems">
-        <img src="../assests/MoviePoster (27).png" alt="">
+        <img src="./assests/MoviePoster (27).png" alt="">
       </div>
       <div class="grounditems">
-        <img src="../assests/MoviePoster (28).png" alt="">
+        <img src="./assests/MoviePoster (28).png" alt="">
       </div>
   </section>
 
@@ -190,40 +190,40 @@
   <h3 class="groundh3">Listem</h3>
   <section class="ground-container2 snap-scroll">
       <div class="grounditems2">
-        <img src="../assests/MoviePoster (29).png" alt="">
+        <img src="./assests/MoviePoster (29).png" alt="">
       </div>
       <div class="grounditems2">
-        <img src="../assests/MoviePoster (30).png" alt="">
+        <img src="./assests/MoviePoster (30).png" alt="">
       </div>
       <div class="grounditems2">
-        <img src="../assests/MoviePoster (31).png" alt="">
+        <img src="./assests/MoviePoster (31).png" alt="">
       </div>
       <div class="grounditems2">
-        <img src="../assests/MoviePoster (32).png" alt="">
+        <img src="./assests/MoviePoster (32).png" alt="">
       </div>
       <div class="grounditems2">
-        <img src="../assests/MoviePoster (33).png" alt="">
+        <img src="./assests/MoviePoster (33).png" alt="">
       </div>
       <div class="grounditems2">
-        <img src="../assests/MoviePoster (17).png" alt="">
+        <img src="./assests/MoviePoster (17).png" alt="">
       </div>
       <div class="grounditems2">
-        <img src="../assests/MoviePoster (17).png" alt="">
+        <img src="./assests/MoviePoster (17).png" alt="">
       </div>
       <div class="grounditems2">
-        <img src="../assests/MoviePoster (17).png" alt="">
+        <img src="./assests/MoviePoster (17).png" alt="">
       </div>
       <div class="grounditems2">
-        <img src="../assests/MoviePoster (17).png" alt="">
+        <img src="./assests/MoviePoster (17).png" alt="">
       </div>
   </section>
 
   <footer class="footer-container">
     <div class="footer-logos">
-      <div class="logos"><a href=""> <img src="../assests/fbfooter.png" alt=""></a></div>
-      <div class="logos"><a href=""> <img src="../assests/instagram.footer.png" alt=""></a></div>
-      <div class="logos"><a href=""> <img src="../assests/twitterfooter.png" alt=""></a></div>
-      <div class="logos"><a href=""> <img src="../assests/youtubefoter.png" alt=""></a></div>
+      <div class="logos"><a href=""> <img src="./assests/fbfooter.png" alt=""></a></div>
+      <div class="logos"><a href=""> <img src="./assests/instagram.footer.png" alt=""></a></div>
+      <div class="logos"><a href=""> <img src="./assests/twitterfooter.png" alt=""></a></div>
+      <div class="logos"><a href=""> <img src="./assests/youtubefoter.png" alt=""></a></div>
     </div>
     <div class="footer-flex">
       <div class="flex-items">
@@ -245,7 +245,7 @@
       </div>
       <div class="flex-items">
         <ul>
-          <li><a href="../pages/profile-page.html">Account</a></li>
+          <li><a href="./pages/profile-page.html">Account</a></li>
           <li><a href="">Redeem Gifts Cards</a></li>
           <li><a href="">Privacy</a></li>
           <li><a href="">Speed Test</a></li>
